--- a/balcone_strip_music.yaml
+++ b/balcone_strip_music.yaml
@@ -22,8 +22,8 @@ custom_component:
       return {udp_music};
 light:
   - platform: partition
-    name: "Lato Sinistro"
-    color_correct: [50%, 100%, 100%]
+    name: "JT Balcone Lato Sinistro"
+    color_correct: [100%, 100%, 100%]
     id: lato_sx
     segments:
       - id: balcone_sala
@@ -34,9 +34,20 @@ light:
           name: Scan 
           move_interval: 10ms
           scan_width: 40   
+      - addressable_color_wipe:
+          name: Europe Wipe 
+          colors:
+            - red: 0%
+              green: 0%
+              blue: 100%
+              num_leds: 10
+            - red: 100%
+              green: 100%
+              blue: 0%
+              num_leds: 10
   - platform: partition
-    name: "Lato Destro"
-    color_correct: [100%, 100%, 100%]
+    name: "JT Balcone Lato Destro"
+    color_correct: [100%, 80%, 100%]
     id: lato_dx
     segments:
       - id: balcone_sala
@@ -47,20 +58,32 @@ light:
           name: Scan 
           move_interval: 10ms
           scan_width: 40   
-  - platform: partition
-    name: "Balcone Sala"
-    segments:
-      - id: lato_sx
-        from: 0
-        to: 149
-      - id: lato_dx
-        from: 150
-        to: 299
-    effects:
-       - addressable_scan:
-           name: Scan 
-           move_interval: 10ms
-           scan_width: 40   
+      - addressable_color_wipe:
+          name: Europe Wipe 
+          colors:
+            - red: 0%
+              green: 0%
+              blue: 100%
+              num_leds: 10
+            - red: 100%
+              green: 100%
+              blue: 0%
+              num_leds: 10
+
+          #  - platform: partition
+          #    name: "Balcone Sala"
+          #    segments:
+          #      - id: lato_sx
+          #        from: 0
+          #        to: 149
+          #      - id: lato_dx
+          #        from: 150
+          #        to: 299
+          #    effects:
+          #       - addressable_scan:
+          #           name: Scan 
+          #           move_interval: 10ms
+          #           scan_width: 40   
 
   - platform: fastled_clockless
     chipset: WS2812
@@ -70,62 +93,62 @@ light:
     max_refresh_rate: 16ms
     #   pin: GPIO19
     pin: D5
-    num_leds: 300
-    name: "Luci Raw"
-    #    internal: true
+    num_leds:  300
+    name: "JT Balcone Strip"
+    #internal: true
     id: balcone_sala
-    #    effects:
-    #          - random:
-    #              name: "Random Color"
-    #              transition_length: 3s
-    #              update_interval: 10s
-    #          - addressable_color_wipe:
-    #              name: Santa is Coming
-    #              colors:
-    #                - red: 70%
-    #                  green: 80%
-    #                  blue: 80%
-    #                  num_leds: 1
-    #                - red: 0%
-    #                  green: 0%
-    #                  blue: 0%
-    #                  num_leds: 2
-    #              add_led_interval: 100ms
-    #          - addressable_fireworks:
-    #              name: Fireworks 
-    #              update_interval: 2ms
-    #              spark_probability: 90%
-    #              use_random_color: True
-    #              fade_out_rate: 255 
-    #          - addressable_flicker:
-    #              name: Flicker 
-    #              update_interval: 16ms
-    #              intensity: 10%
-    #          - addressable_scan:
-    #              name: Scan 
-    #              move_interval: 10ms
-    #              scan_width: 40    
-    #          - addressable_rainbow:
-    #              name: Rainbow 
-    #              speed: 10
-    #              width: 150
-    #          - addressable_color_wipe:
-    #              name: Color Wipe 
-    #              colors:
-    #               - num_leds: 300
-    #                 random: True
-    #              add_led_interval: 10ms
-    #              reverse: False
-    #          - addressable_lambda:
-    #              name: ARTNET
-    #              update_interval: 0s
-    #              lambda: |-
-    #                music_leds.ShowFrame(MODE_ARTNET, &it);
-    #          - addressable_lambda:
-    #              name: MUSIC
-    #              update_interval: 0s
-    #              lambda: |-
-    #                music_leds.ShowFrame(MODE_MUSIC, &it);
+    effects:
+              - random:
+                  name: "Random Color"
+                  transition_length: 3s
+                  update_interval: 10s
+              - addressable_color_wipe:
+                  name: Santa is Coming
+                  colors:
+                    - red: 70%
+                      green: 80%
+                      blue: 80%
+                      num_leds: 1
+                    - red: 0%
+                      green: 0%
+                      blue: 0%
+                      num_leds: 2
+                  add_led_interval: 100ms
+              - addressable_fireworks:
+                  name: Fireworks 
+                  update_interval: 2ms
+                  spark_probability: 90%
+                  use_random_color: True
+                  fade_out_rate: 255 
+              - addressable_flicker:
+                  name: Flicker 
+                  update_interval: 16ms
+                  intensity: 10%
+              - addressable_scan:
+                  name: Scan 
+                  move_interval: 10ms
+                  scan_width: 40    
+              - addressable_rainbow:
+                  name: Rainbow 
+                  speed: 10
+                  width: 150
+              - addressable_color_wipe:
+                  name: Color Wipe 
+                  colors:
+                   - num_leds: 300
+                     random: True
+                  add_led_interval: 10ms
+                  reverse: False
+              - addressable_lambda:
+                  name: ARTNET
+                  update_interval: 0s
+                  lambda: |-
+                    music_leds.ShowFrame(MODE_ARTNET, &it);
+              - addressable_lambda:
+                  name: MUSIC
+                  update_interval: 0s
+                  lambda: |-
+                    music_leds.ShowFrame(MODE_MUSIC, &it);
 
 
 # Enable logging
